tests/Fixtures/Torture/Bad/thread_no_entry.g
// EXPECT G000
// A thread must declare its single 'entry func'.
user { process App { thread T { } } }
